Correct display right menu on mobile display. Right Menu View.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -472,9 +472,9 @@ hr {
 @media (min-width: 320px) and (max-width: 767px) {
 
 
-  .example{
-    margin-top: 60px;
-    margin-bottom: 30px;
+  .right-menu-title{
+    margin-top: 0;
+    padding-top: 50px;
   }
 
 }
